fix: scrollbar on avatar

--- a/components/Common/AvatarGroup/index.module.css
+++ b/components/Common/AvatarGroup/index.module.css
@@ -1,5 +1,7 @@
 .avatarGroup {
-  @apply flex
+  @apply -mb-4
+    flex
     items-center
-    overflow-x-scroll;
+    overflow-x-scroll
+    pb-4;
 }
